--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # testing
 /coverage
 
-# production
+# Build
 /build
 
 # misc
@@ -21,3 +21,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Linters
+.eslintrc.json
+.stylelintrc.json
+.babelrc
+
+# Local Netlify folder
+.netlify
