--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,8 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off",
-    "react/jsx-key": "off"
+    "react/jsx-key": "off",
+    "no-shadow": "off"
   },
   "ignorePatterns": ["dist/", "build/"]
 }
