--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+#Linters
+.eslintrc.json
+.stylelintrc.json
+
 # Local Netlify folder
 .netlify
